<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorWhite"
    android:orientation="vertical"
    tools:context="com.nearbyrestaurant.activities.BusinessDetailActivity">

    <include
        android:id="@+id/tb_business_detail_screen"
        layout="@layout/view_app_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:clipToPadding="false"
        android:padding="@dimen/margin_normal"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="top"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/iv_business_pic"
                        android:layout_width="@dimen/business_detail_image_height_width"
                        android:layout_height="@dimen/business_detail_image_height_width"
                        android:background="@drawable/shape_business_pic_bg"
                        android:padding="@dimen/margin_xxxSmall"
                        android:scaleType="centerCrop"
                        android:src="@drawable/ic_place_holder" />

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/margin_normal"
                        android:layout_weight="1"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/tv_business_name"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textColor="@color/colorBlack"
                            android:textSize="@dimen/font_normal" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/margin_normal"
                            android:text="@string/map_rating_label"
                            android:textColor="@color/colorBlack"
                            android:textSize="@dimen/font_normal" />

                        <android.support.v7.widget.AppCompatRatingBar
                            android:id="@+id/rb_business_ratings"
                            style="?android:attr/ratingBarStyleSmall"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/margin_xSmall"
                            android:numStars="5"
                            android:progressTint="@color/colorPrimary" />

                    </LinearLayout>
                </LinearLayout>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_normal"
                    android:text="@string/map_address_label"
                    android:textColor="@color/colorBlack"
                    android:textSize="@dimen/font_normal" />

                <TextView
                    android:id="@+id/tv_business_address"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_xSmall"
                    android:textColor="@color/colorGray"
                    android:textSize="@dimen/font_small" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_normal"
                    android:text="@string/business_phone_label"
                    android:textColor="@color/colorBlack"
                    android:textSize="@dimen/font_normal" />

                <TextView
                    android:id="@+id/tv_business_phone"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_xSmall"
                    android:textColor="@color/colorGray"
                    android:textSize="@dimen/font_small" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/ll_business_review"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_normal"
                    android:gravity="center_vertical"
                    android:orientation="horizontal"
                    android:padding="@dimen/margin_xxSmall">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/business_review_label"
                        android:textColor="@color/colorBlack"
                        android:textSize="@dimen/font_normal" />

                    <TextView
                        android:id="@+id/tv_business_review_count"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/margin_xxSmall"
                        android:textColor="@color/colorGray"
                        android:textSize="@dimen/font_normal" />

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="right"
                        android:text="@string/business_review_view_all_label"
                        android:textColor="@color/colorPrimary" />
                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/app_divider_height"
                    android:layout_marginTop="@dimen/margin_xSmall"
                    android:background="@color/colorGray" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_xSmall"
                    android:gravity="top"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/iv_review_user_pic"
                        android:layout_width="@dimen/business_review_user_pic_height_width"
                        android:layout_height="@dimen/business_review_user_pic_height_width"
                        android:background="@drawable/shape_business_pic_bg"
                        android:padding="@dimen/margin_xxxSmall"
                        android:scaleType="centerCrop"
                        android:src="@drawable/ic_place_holder" />

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/margin_xSmall"
                        android:layout_weight="1"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/tv_review_user_name"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textColor="@color/colorBlack"
                            android:textSize="@dimen/font_normal" />

                        <android.support.v7.widget.AppCompatRatingBar
                            android:id="@+id/rb_review_user_ratings"
                            style="?android:attr/ratingBarStyleSmall"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/margin_xSmall"
                            android:numStars="5"
                            android:progressTint="@color/colorPrimary" />

                        <TextView
                            android:id="@+id/tv_review_user_message"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/margin_xSmall"
                            android:textColor="@color/colorGray"
                            android:textSize="@dimen/font_small" />
                    </LinearLayout>
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</LinearLayout>
